# models/user.go
@@ -7,7 +7,9 @@ type User struct {
 	ID           string    `json:"id"` // UUID sifatida string
 	FullName     string    `json:"full_name"`
 	Phone        string    `json:"phone"`
-	PasswordHash string    `json:"-"` // JSON'da ko'rsatilmasin
+	Email        *string   `json:"email,omitempty"`    // Nullable - majburiy emas
+	AvatarURL    *string   `json:"avatar_url,omitempty"` // Nullable - rasm manzili
+	PasswordHash string    `json:"-"`                  // JSON'da ko'rsatilmasin
 	CreatedAt    time.Time `json:"created_at"`
 	UpdatedAt    time.Time `json:"updated_at"`
 }
